updated type + color

--- a/about/index.html
+++ b/about/index.html
@@ -32,10 +32,7 @@
           ga('send', 'pageview');
         </script>
 <!-- Fonts -->   
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
-        <script src="https://use.typekit.net/uch1wgd.js"></script>
-        <script>try{Typekit.load({ async: true });}catch(e){}</script>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900|Source+Serif+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:500,700" rel="stylesheet">
 </head>
     <body class="beating-hearts-baby">
     <a href="http://breakupsurvival.guide/" class="logo-link">
