--- a/index.html
+++ b/index.html
@@ -33,37 +33,15 @@
           ga('send', 'pageview');
         </script>
 <!-- Fonts -->   
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
-        <script src="https://use.typekit.net/uch1wgd.js"></script>
-        <script>try{Typekit.load({ async: true });}catch(e){}</script>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900|Source+Serif+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:500,700" rel="stylesheet">
 </head>
     <body>
-    <a href="http://breakupsurvival.guide/" class="logo-link">
-        <svg class="logo" width="71" height="55" viewBox="0 0 71 55" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <title>Breakup Survival Guide</title>
-        <defs>
-            <path d="M28.23 17.264l3.565-8.03C28.943 4.002 23.485.46 17.217.46 8.002.46.53 8.11.53 17.545c0 19.24 29.13 35.834 31.196 36.988L28.23 39.32l7.182-10.502-7.183-11.554z" id="a"/>
-            <path d="M18.71.46C12.404.46 6.916 4.044 4.078 9.33c-.018-.034-.038-.064-.056-.097l-3.565 8.03 7.18 11.552-7.18 10.503L3.95 54.53l.126.07s31.32-17.11 31.32-37.058C35.4 8.11 27.927.46 18.712.46z" id="c"/>
-        </defs>
-        <g fill="none" fill-rule="evenodd">
-            <g>
-            <mask id="b" fill="#fff">
-            <use xlink:href="#a"/></mask>
-            <path class="logo-fill" mask="url(#b)" d="M-3.748-3.91H39.69v62.812H-3.75"/></g>
-            <g transform="translate(35)">
-            <mask id="d" fill="#fff">
-            <use xlink:href="#c"/></mask>
-            <path class="logo-fill" mask="url(#d)" d="M-3.823-3.91h43.497v62.88H-3.823"/></g>
-        </g>
-        </svg>
-    </a>
+    <a href="/index.html" class="h2"> OPPORTUNITY COSTS</a>
     <div class="intro-container">
-        <h1 class="suggestion"> Welcome to the Breakup Survival Guide </h1>
-        <h2 class="subtitle"> First of all, I'm so sorry you’re here. </h2>
-           <p class="description"> This site is a repository of things to do, watch, read, listen to, and think during times of heartache. Here you’ll explore more than 400 suggestions from real human beings who have been through the pain you're feeling now. Browse through the advice endlessly – instead of your ex’s Facebook photos.</p>
-        <a class="get-started" href="http://breakupsurvival.guide/tips">Let's go! My heart hurts.</a>
-         <p class="footnote"> Powered by <a href="https://docs.google.com/spreadsheets/d/1M42gLZLANOxXxl9-N2MEYcw0FW9ng2fSRhaLtrMykw0/edit#gid=1413098018">listeners</a> of the <a href="http://www.wnyc.org/shows/deathsexmoney">Death, Sex & Money</a> podcast. <a href="http://breakupsurvival.guide/about">Read more</a> about this project. </p>
+        <h1 class="suggestion"> "Class is a level of pride or shame." </h1>
+           <p class="description"> We asked you to tell us about moments that your sense of class made you feel pride, and when it made you feel shame. We share those moments, totally randomized, here.  </p>
+         <p class="footnote"> Made by <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> for Death, Sex, and Money.</p>
+        <a class="next-suggestion" a href="/tips/index.html">Get started</a>
     </div>
  </body>
 </html>
