--- a/tips/index.html
+++ b/tips/index.html
@@ -33,40 +33,24 @@
           ga('send', 'pageview');
         </script>
 <!-- Fonts -->   
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
-        <script src="https://use.typekit.net/uch1wgd.js"></script>
-        <script>try{Typekit.load({ async: true });}catch(e){}</script>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900|Source+Serif+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:500,700" rel="stylesheet">
 </head>
     <body class="beating-hearts-baby">
-    <a href="http://breakupsurvival.guide/" class="logo-link">
-        <svg class="logo" width="71" height="55" viewBox="0 0 71 55" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <title>Breakup Survival Guide</title>
-        <defs>
-            <path d="M28.23 17.264l3.565-8.03C28.943 4.002 23.485.46 17.217.46 8.002.46.53 8.11.53 17.545c0 19.24 29.13 35.834 31.196 36.988L28.23 39.32l7.182-10.502-7.183-11.554z" id="a"/>
-            <path d="M18.71.46C12.404.46 6.916 4.044 4.078 9.33c-.018-.034-.038-.064-.056-.097l-3.565 8.03 7.18 11.552-7.18 10.503L3.95 54.53l.126.07s31.32-17.11 31.32-37.058C35.4 8.11 27.927.46 18.712.46z" id="c"/>
-        </defs>
-        <g fill="none" fill-rule="evenodd">
-            <g>
-            <mask id="b" fill="#fff">
-            <use xlink:href="#a"/></mask>
-            <path class="logo-fill" mask="url(#b)" d="M-3.748-3.91H39.69v62.812H-3.75"/></g>
-            <g transform="translate(35)">
-            <mask id="d" fill="#fff">
-            <use xlink:href="#c"/></mask>
-            <path class="logo-fill" mask="url(#d)" d="M-3.823-3.91h43.497v62.88H-3.823"/></g>
-        </g>
-        </svg>
+    <a href="/index.html" class="h2"> OPPORTUNITY COSTS
         </a>
     <div class="animate-content">
     <div class="content-container">
-        <p class="category"> Something to <span class="category-name" id="type"></span></p>
+        <p class="category"> Pride </p>
         <h1 class="suggestion" id="suggestion"></h1>
         <p class="comment" id="comment"></p>
-        <p class="suggester">Suggested by <span class="name" id="name"></span></p>
+    </div>
+       <div class="content-container">
+        <p class="category"> Shame </p>
+        <h1 class="suggestion" id="suggestion"> I don’t know if I would have been able to get to this point without the financial support of my parents </h1>
+        <p class="suggester"> Moment from <span class="category-name" id="name"></span> in <span class="category-name" id="type"></span></p>
     </div>
     </div>
-        <button class="next-suggestion js--next-suggestion">Next suggestion</button>
+        <button class="next-suggestion js--next-suggestion">Next</button>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
         <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="../js/jquery.transit.js"></script>
