hooks up new sheet

--- a/tips/index.html
+++ b/tips/index.html
@@ -41,13 +41,17 @@
     <div class="animate-content">
     <div class="content-container">
         <p class="category"> Pride </p>
-        <h1 class="suggestion" id="suggestion"></h1>
+        <h1 class="suggestion" id="pride"></h1>
         <p class="comment" id="comment"></p>
     </div>
-       <div class="content-container">
+    <div class="content-container">
         <p class="category"> Shame </p>
-        <h1 class="suggestion" id="suggestion"> I don’t know if I would have been able to get to this point without the financial support of my parents </h1>
-        <p class="suggester"> Moment from <span class="category-name" id="name"></span> in <span class="category-name" id="type"></span></p>
+        <h1 class="suggestion" id="shame"></h1>
+        <p class="suggester"> 
+            Moment from <span class="category-name" id="name"></span>, 
+            age <span class="category-age" id="age"></span> 
+            in <span class="category-location" id="location"></span>
+        </p>
     </div>
     </div>
         <button class="next-suggestion js--next-suggestion">Next</button>
