added emoji svgs

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <body>
     <a href="/index.html" class="h2"> OPPORTUNITY COSTS</a>
     <div class="intro-container">
-        <h1 class="suggestion"> "Class is a level of pride or shame." </h1>
-           <p class="description"> We asked you to tell us about moments that your sense of class made you feel pride, and when it made you feel shame. We share those moments, totally randomized, here.  </p>
+        <h1 class="suggestion">"Class is a level of pride or shame." </h1>
+           <p class="description"> We asked you to tell us about moments that your class status made you feel proud, and when it made you feel ashamed. This site shares those moments, totally randomized.  </p>
          <p class="footnote"> Made by <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> for Death, Sex, and Money.</p>
         <a class="next-suggestion" a href="/tips/index.html">Get started</a>
     </div>
