--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </div>
 
     <script type="text/javascript">
-      if ('serviceWorker' in navigator) {
-      navigator.serviceWorker
-               .register('./service-worker.js')
-               .then(function() { console.log('Service Worker Registered'); });
-      }
+      // if ('serviceWorker' in navigator) {
+      // navigator.serviceWorker
+      //          .register('./service-worker.js')
+      //          .then(function() { console.log('Service Worker Registered'); });
+      // }
     </script>
  </body>
 </html>
