added header, tweaked spacing

--- a/tips/index.html
+++ b/tips/index.html
@@ -35,8 +35,13 @@
 <!-- Fonts -->   
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:500,700" rel="stylesheet">
 </head>
+    <body>
+    <div class= "header">
+      <a class= "title" href="/index.html"> Opportunity Costs </a>
+      <h2 class="subtitle"> Moments of class pride and shame,  <br> from <a class="subtitle-link" href= "https://www.wnycstudios.org/story/opportunity-costs-death-sex-money-podcast/">Death, Sex & Money</a> listeners  </h2>
+    </div>
+<div class="page">
     <body class="beating-hearts-baby">
-    <a href="/index.html" class="h2"> OPPORTUNITY COSTS</a>
     <div class="animate-content">
     <div class="content-container">
         <p class="category"> Pride 
@@ -73,12 +78,12 @@
             </g>
             </svg>
         </p>
-        <h1 class="suggestion" id="shame"></h1>
+        <h1 class="suggestion" id="shame"></h1> 
         <p class="suggester"> 
-            Moment from <span class="category-name" id="name"></span>, 
-            age <span class="category-age" id="age"></span> 
-            in <span class="category-location" id="location"></span>
-        </p>
+        Moments from <span class="category-name" id="name"></span>, 
+        age <span class="category-age" id="age"></span>,
+        in <span class="category-location" id="location"></span>
+        </p>  
     </div>
     </div>
         <button class="next-suggestion js--next-suggestion">Next</button>
