--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:500,700" rel="stylesheet">
 </head>
     <body>
-    <a href="/index.html" class="h2"> OPPORTUNITY COSTS</a>
+    <div class= "header">
+      <a class= "title" href="/index.html"> Opportunity Costs </a>
+      <h2 class="subtitle"> Moments of class pride and shame,  <br> from <a class="subtitle-link" href= "https://www.wnycstudios.org/story/opportunity-costs-death-sex-money-podcast/">Death, Sex & Money</a> listeners  </h2>
+    </div>
+<div class="page">
     <div class="intro-container">
-        <h1 class="suggestion">"Class is a level of pride or shame." </h1>
-           <p class="description"> We asked you to tell us about moments that your class status made you feel proud, and when it made you feel ashamed. This site shares those moments, totally randomized.  </p>
+        <h1 class="intro">"Class is a level of pride or shame." </h1>
+           <p class="description"> We asked you to tell us about moments that your class status made you feel proud, and when it made you feel ashamed. This site shares those moments, totally randomized.</p>
          <p class="footnote"> Made by <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> for Death, Sex, and Money.</p>
         <a class="next-suggestion" a href="/tips/index.html">Get started</a>
     </div>
+  </div>
  </body>
 </html>
