changed title, added page max-width

--- a/tips/index.html
+++ b/tips/index.html
@@ -10,15 +10,14 @@
 <!-- Meta -->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Breakup Survival Guide</title>
-        <meta name='author' content='Emily Theis' />
-        <meta name='description' content='Things to do, think, read, watch, and listen to during times of heartache.'/>
+        <title>Opportunity Costs</title>
+        <meta name='description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'/>
         <meta property='og:city' content='Boston' />
         <meta property='og:state' content='MA' />
         <meta property='og:country' content='US' />
          <meta property='og:type' content='profile'/>
-        <meta property='og:title' content='Breakup Survival Guide' />
-        <meta property='og:description' content='Things to do, think, read, watch, and listen to during times of heartache.'' />
+        <meta property='og:title' content='Opportunity Costs' />
+        <meta property='og:description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'' />
         <meta property='og:url' content='http://breakupsurvival.guide' />
         <meta property='og:image' content='http://breakupsurvival.guide/breakupsurvivalguide.png' />
         <meta property='og:site_name' content='http://breakupsurvival.guide' /> 
