--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:500,700" rel="stylesheet">
 </head>
     <body class="beating-hearts-baby">
-    <a href="http://breakupsurvival.guide/" class="logo-link">
+    <a href="/" class="logo-link">
         <svg class="logo" width="71" height="55" viewBox="0 0 71 55" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <title>Breakup Survival Guide</title>
         <defs>
