--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 class="intro">"Class is a level of pride or shame." </h1>
            <p class="description"> We asked you to <a href= "https://wnyc.typeform.com/to/bAB405"> tell us</a> about moments that your class status made you feel proud, and when it made you feel ashamed. This site shares those moments, totally randomized.</p>
          <p class="footnote"> Made by <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> for <a href= "https://www.wnycstudios.org/story/opportunity-costs-death-sex-money-podcast/"> Death, Sex & Money. </a></p>
-        <a class="next-suggestion" a href="/tips/index.html">Get started</a>
+        <a class="next-suggestion" a href="./moments/index.html">Get started</a>
     </div>
   </div>
   <script type="text/javascript">
