Adds loading animation and refines suggester styles

--- a/moments/index.html
+++ b/moments/index.html
@@ -39,6 +39,9 @@
       <a class= "title" href="/"> Opportunity Costs </a>
       <h2 class="subtitle"> Moments of class pride and shame,  <br> from <a class="subtitle-link" href= "https://www.wnycstudios.org/story/opportunity-costs-death-sex-money-podcast/">Death, Sex & Money</a> listeners  </h2>
     </div>
+<div class="loader">
+    <svg width="152px" height="152px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-rolling" style="animation-play-state: running; animation-delay: 0s; background: rgba(0, 0, 0, 0) none repeat scroll 0% 0%;"><circle cx="50" cy="50" fill="none" ng-attr-stroke="{{config.color}}" ng-attr-stroke-width="{{config.width}}" ng-attr-r="{{config.radius}}" ng-attr-stroke-dasharray="{{config.dasharray}}" stroke="#dcf42b" stroke-width="10" r="35" stroke-dasharray="164.93361431346415 56.97787143782138" style="animation-play-state: running; animation-delay: 0s;"><animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;360 50 50" keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite" style="animation-play-state: running; animation-delay: 0s;"></animateTransform></circle></svg>
+</div>
 <div class="page">
     <div class="animate-content">
         <div class="content-container">
