--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="description"> We asked you to <a href= "https://wnyc.typeform.com/to/bAB405"> tell us</a> which aspects of your class status make you feel pride, and which make you feel shame. This site shares your responses, totally randomized.</p>
       <p class="description">This project was built by listeners <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> and is part of Opportunity Costs: a Death, Sex & Money series of conversations around class. Listen to those episodes <a href= "http://deathsexmoney.org/class" target=blank>here.</a> </p> 
       <p class="footnote"> </p>
-      <a class="next-suggestion" a href="/tips/index.html">Get started</a>
+      <a class="next-suggestion" a href="./moments/index.html">Get started</a>
     </div>
   </div>
   <script type="text/javascript">
