Fixes title link

--- a/moments/index.html
+++ b/moments/index.html
@@ -15,7 +15,7 @@
          <meta property='og:type' content='profile'/>
         <meta property='og:title' content='Opportunity Costs' />
         <meta property='og:description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'' />
-        <meta property='og:url' content='http://breakupsurvival.guide' />
+        <meta property='og:url' content='https://emilytheis.github.io/dsm-class/' />
         <meta property='og:image' content='http://dsmclass.community/dsm-class.png' />
         <meta property='og:site_name' content='http://dsmclass.community' /> 
         <meta name='robots' content='noarchive' />
@@ -24,7 +24,7 @@
 </head>
 <body class="beating-hearts-baby">
     <div class= "header">
-      <a class= "title" href="/"> Opportunity Costs </a>
+      <a class= "title" href="https://emilytheis.github.io/dsm-class/"> Opportunity Costs </a>
       <h2 class="subtitle"> Moments of class pride and shame,  <br> from <a class="subtitle-link" href= "https://www.wnycstudios.org/story/opportunity-costs-death-sex-money-podcast/">Death, Sex & Money</a> listeners  </h2>
     </div>
 <div class="loader">
