--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name='description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'/>
          <meta property='og:type' content='profile'/>
         <meta property='og:title' content='Opportunity Costs' />
-        <meta property='og:description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'' />
+        <meta property='og:description' content='Class pride and shame,  from Death, Sex & Money listeners'' />
         <meta property='og:url' content='http://breakupsurvival.guide' />
         <meta property='og:image' content='http://dsmclass.community/dsm-class.png' />
         <meta property='og:site_name' content='http://dsmclass.community' /> 
@@ -28,7 +28,7 @@
 <div class="page">
     <div class="intro-container">
       <p class="description"> We asked you to <a href= "https://wnyc.typeform.com/to/bAB405"> tell us</a> which aspects of your class status make you feel pride, and which make you feel shame. This site shares your responses, totally randomized.</p>
-      <p class="description">This project was built by listeners <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> and is part of Opportunity Costs: a Death, Sex & Money series of conversations around class. Listen to those episodes <a href= "http://deathsexmoney.org/class" target=blank>here.</a> </p> 
+      <p class="description">This project was built by listeners <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> and is part of Opportunity Costs, a Death, Sex & Money series of conversations around class. Listen to those episodes <a href= "http://deathsexmoney.org/class" target=blank>here</a>. </p> 
       <p class="footnote"> </p>
       <a class="next-suggestion" a href="./moments/index.html">Get started</a>
     </div>
