--- a/moments/index.html
+++ b/moments/index.html
@@ -11,7 +11,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Opportunity Costs</title>
-        <meta name='description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'/>
+        <meta name='description' content='Class pride and shame,  from Death, Sex & Money listeners'/>
          <meta property='og:type' content='profile'/>
         <meta property='og:title' content='Opportunity Costs' />
         <meta property='og:description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'' />
@@ -48,7 +48,7 @@
                     C67,48.4,66.6,48,66,48z"/>
                     </g>
                     </svg>
-                    I feel proud</p>
+                    I feel proud that</p>
                 <h1 class="suggestion" id="pride"></h1>
                 <p class="comment" id="comment"></p>
             </div>
@@ -67,13 +67,13 @@
                         C67,49.4,66.6,49,66,49z"/>
                     </g>
                     </svg>
-                    I feel ashamed</p>
+                    I feel ashamed that</p>
                 <h1 class="suggestion" id="shame"></h1> 
             </div>
         </div>
              <div class="suggester-container">
                 <p class="suggester"> <span class="category-name" id="name"></span>, 
-                age <span class="category-age" id="age"></span>,
+                <span class="category-age" id="age"></span>,
                 in <span class="category-location" id="location"></span>
                 </p>
             </div>
