--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class= "header"> 
-      <a class="logo-link" href="/index.html"><img src="dsm-logo.png" class="logo"></a></div>
+      <a class="logo-link" href="/index.html"><img src="https://raw.githubusercontent.com/emilytheis/dsm-class/master/Dsm-logo.png" class="logo"></a></div>
 <div class="page">
     <div class="intro-container">
       <p class="description"> We asked you to <a href= "https://wnyc.typeform.com/to/bAB405"> tell us</a> which aspects of your class status make you feel pride, and which make you feel shame. This site shares your responses, totally randomized.</p>
