Makes links relative

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 </head>
 <body>
     <div class= "header"> 
-      <a class="logo-link" href="/index.html"><img src="dsm-logo.png" class="logo"></a></div>
+      <a class="logo-link" href="/"><img src="dsm-logo.png" class="logo"></a></div>
 <div class="page">
     <div class="intro-container">
       <p class="description"> We asked you to <a href= "https://wnyc.typeform.com/to/bAB405"> tell us</a> which aspects of your class status make you feel pride, and which make you feel shame. This site shares your responses, totally randomized.</p>
       <p class="description">This project was built by listeners <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> and is part of Opportunity Costs, a Death, Sex & Money series of conversations around class. Listen to those episodes <a href= "http://deathsexmoney.org/class" target=blank>here</a>. </p> 
       <p class="footnote"> </p>
-      <a class="next-suggestion" a href="./moments/index.html">Get started</a>
+      <a class="next-suggestion" a href="/moments">Get started</a>
     </div>
   </div>
   <script type="text/javascript">
