--- a/moments/index.html
+++ b/moments/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="beating-hearts-baby">
     <div class= "header">
-      <a class= "title" href="https://emilytheis.github.io/dsm-class/"> Opportunity Costs </a>
+      <a class= "title" href="/"> Opportunity Costs </a>
       <h2 class="subtitle"> Moments of class pride and shame,  <br> from <a class="subtitle-link" href= "https://www.wnycstudios.org/story/opportunity-costs-death-sex-money-podcast/">Death, Sex & Money</a> listeners  </h2>
     </div>
 <div class="loader">
