copy edits, header spacing, return of the intro

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Opportunity Costs</title>
-        <meta name='description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'/>
+        <meta name='description' content='Class pride and shame,  from Death, Sex & Money listeners'/>
          <meta property='og:type' content='profile'/>
         <meta property='og:title' content='Opportunity Costs' />
         <meta property='og:description' content='Class pride and shame,  from Death, Sex & Money listeners'' />
@@ -28,6 +28,7 @@
     </div>
 <div class="page">
     <div class="intro-container">
+      <p class = "intro"> "Class is a level of pride or shame" </p>
       <p class="description"> We asked you to <a href= "https://wnyc.typeform.com/to/bAB405"> tell us</a> which aspects of your class status make you feel pride, and which make you feel shame. This site shares your responses, totally randomized.</p>
       <p class="description">This project was built by listeners <a href="http://emilythe.is">Emily Theis</a> and <a href="https://github.com/ktbee">Katie Broida</a> and is part of Opportunity Costs, a Death, Sex & Money series of conversations around class. Listen to those episodes <a href= "http://deathsexmoney.org/class" target=blank>here</a>. </p> 
       <p class="footnote"> </p>
