--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <meta name='robots' content='noarchive' />
 <!-- Fonts -->   
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:500,700" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114550103-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114550103-1');
+</script>
 </head>
 <body>
     <div class= "header"> 
