updated share url

--- a/moments/index.html
+++ b/moments/index.html
@@ -15,7 +15,7 @@
          <meta property='og:type' content='profile'/>
         <meta property='og:title' content='Opportunity Costs' />
         <meta property='og:description' content='Moments of class pride and shame,  from Death, Sex & Money listeners'' />
-        <meta property='og:url' content='https://emilytheis.github.io/dsm-class/' />
+        <meta property='og:url' content='http://dsmclass.community'/>
         <meta property='og:image' content='http://dsmclass.community/dsm-class.png' />
         <meta property='og:site_name' content='http://dsmclass.community' /> 
         <meta name='robots' content='noarchive' />
